<?xml version="1.0"?>
<package format="3">
  <name>ui_test3_hsv</name>
  <version>0.1.0</version>
  <description>description</description>

  <maintainer email="wjddnrud4487@naver.com">jwg</maintainer>
  <author>jwg</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>Boost</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
